--- a/Sherpa_Dawa_AS02.ipynb
+++ b/Sherpa_Dawa_AS02.ipynb
@@ -13,15 +13,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "https://colab.research.google.com/github/Dawa1022/Hello-Jupyter/blob/main/Sherpa_Dawa_AS02.ipynb"
+        "This program is calculating the sum of the first n number, for n = 10^5, 10^6, and 10^7, in the array we generate using the following four methods to calculate the sums:\n",
+        "\n",
+        "\n",
+        "1. math.fsum.\n",
+        "2. numpy.sum.\n",
+        "3. Naive summation\n",
+        "4. Compensated summation"
       ],
       "metadata": {
-        "id": "aAeQilaTukqi"
+        "id": "sF8EL0be-Bg_"
       }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "3C74KqjCuhMP"
       },
@@ -37,32 +43,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "mpCIZ6g3uhMR"
       },
       "outputs": [],
       "source": [
         "# generate array of numbers\n",
-        "id = 23718941         # use your student id number here.\n",
+        "id = 23718952         # used an id number here.\n",
         "random.seed(id)\n",
         "id10 = id/10**10"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "TF1n7B4AuhMR",
-        "outputId": "3e659ac1-ebe6-4e7f-dbf9-e6d765c702db"
+        "outputId": "4412eb30-7c14-4f32-deaf-0355fd7e2e9e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Time taken to calculate Math.fsum for n = 10^5:  0.007842779159545898\n",
-            "Math.fsum for n = 10^5:  100261.35458989414\n",
+            "Time taken to calculate Math.fsum for n = 10^5:  0.007704496383666992\n",
+            "Math.fsum for n = 10^5:  100371.64184169735\n",
             "Absolute error :  0.0\n",
             "Relative error :  0.0\n"
           ]
@@ -91,20 +100,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "9cZpKvM6uhMS",
-        "outputId": "3890f77d-766c-497b-f378-6cb533cd3206"
+        "outputId": "5b4e8ca6-d475-4489-8676-4af21df2182f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Time taken to calculate numpy.sum for n = 10^5:  0.00010395050048828125\n",
-            "numpy.sum for n = 10^5:  100261.35458989414\n",
-            "Absolute error :  0.0\n",
-            "Relative error :  0.0\n"
+            "Time taken to calculate numpy.sum for n = 10^5:  0.0009264945983886719\n",
+            "numpy.sum for n = 10^5:  100371.64184169733\n",
+            "Absolute error :  1.4551915228366852e-11\n",
+            "Relative error :  1.4498034466067245e-16\n"
           ]
         }
       ],
@@ -120,20 +132,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "PvfnVxR-uhMS",
-        "outputId": "d50f9699-c3b6-4a32-b512-21531475c08b"
+        "outputId": "4f2b3d1a-a515-4bb1-9b2e-99ad7b3eaf9a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Time taken to calculate naive sum for n = 10^5:  0.018064022064208984\n",
-            "Naive sum for n = 10^5:  100260.58952047117\n",
-            "Absolute error :  0.765069422966917\n",
-            "Relative error :  7.630750911917485e-06\n"
+            "Time taken to calculate naive sum for n = 10^5:  0.030792713165283203\n",
+            "Naive sum for n = 10^5:  100370.2862472777\n",
+            "Absolute error :  1.3555944196414202\n",
+            "Relative error :  1.3505751174016029e-05\n"
           ]
         }
       ],
@@ -151,20 +166,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "J3VXJCLVuhMS",
-        "outputId": "26d23c8d-c918-42ce-8554-e1b552bffafd"
+        "outputId": "a2750870-899d-405b-ca1e-0d744d535240",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Time taken to calculate Compensated sum for n = 10^5:  0.03931903839111328\n",
-            "Compensated sum for n = 10^5:  100260.58952047168\n",
-            "Absolute error :  0.7650694224576\n",
-            "Relative error :  7.630750906837591e-06\n"
+            "Time taken to calculate Compensated sum for n = 10^5:  0.06030726432800293\n",
+            "Compensated sum for n = 10^5:  100370.28624727744\n",
+            "Absolute error :  1.3555944199033547\n",
+            "Relative error :  1.3505751176625675e-05\n"
           ]
         }
       ],
@@ -205,18 +223,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "dDsStivzuhMU",
-        "outputId": "819c7482-6d9b-40aa-8928-f99cc4cab93b"
+        "outputId": "6f5b57ba-05dd-4b85-cda4-eba468aac72d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Time taken to calculate Math.fsum for n = 10^6:  0.07611608505249023\n",
-            "Math.fsum for n = 10^6:  1002245.5180405993\n",
+            "Time taken to calculate Math.fsum for n = 10^6:  0.07987356185913086\n",
+            "Math.fsum for n = 10^6:  1001205.376595938\n",
             "Absolute error :  0.0\n",
             "Relative error :  0.0\n"
           ]
@@ -241,20 +262,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "mxy3zF1wuhMU",
-        "outputId": "0a0ae359-75aa-4850-b9bb-3bc320d62e9c"
+        "outputId": "f99eb3ee-f262-4655-c5c6-3b4e070fe7ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Time taken to calculate numpy.sum for n = 10^6:  0.00043892860412597656\n",
-            "numpy.sum for n = 10^6:  1002245.5180405986\n",
-            "Absolute error :  6.984919309616089e-10\n",
-            "Relative error :  6.969269688800086e-16\n"
+            "Time taken to calculate numpy.sum for n = 10^6:  0.0012362003326416016\n",
+            "numpy.sum for n = 10^6:  1001205.376595938\n",
+            "Absolute error :  0.0\n",
+            "Relative error :  0.0\n"
           ]
         }
       ],
@@ -270,20 +294,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "Gv_plaFhuhMV",
-        "outputId": "12adb081-821d-4f85-d718-67f04bf66a60"
+        "outputId": "1cf77ace-eba4-4f34-f195-ca8cc545eee8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Time taken to calculate naive sum for n = 10^6:  0.16716718673706055\n",
-            "Naive sum for n = 10^6:  1002244.9697122116\n",
-            "Absolute error :  0.548328387667425\n",
-            "Relative error :  5.470998650504448e-07\n"
+            "Time taken to calculate naive sum for n = 10^6:  0.2523975372314453\n",
+            "Naive sum for n = 10^6:  1001204.5028383165\n",
+            "Absolute error :  0.873757621506229\n",
+            "Relative error :  8.727056825013998e-07\n"
           ]
         }
       ],
@@ -301,20 +328,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "WF3TVLN8uhMV",
-        "outputId": "b128ac88-c94c-4ee4-8f97-0277c8ad185a"
+        "outputId": "2786970a-3690-48c8-c159-b30226547e0f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Time taken to calculate Compensated sum for n = 10^6:  0.38730287551879883\n",
-            "Compensated sum for n = 10^6:  1002244.969712167\n",
-            "Absolute error :  0.5483284322544932\n",
-            "Relative error :  5.470999095376163e-07\n"
+            "Time taken to calculate Compensated sum for n = 10^6:  0.6180047988891602\n",
+            "Compensated sum for n = 10^6:  1001204.5028383213\n",
+            "Absolute error :  0.8737576167332008\n",
+            "Relative error :  8.727056777341179e-07\n"
           ]
         }
       ],
@@ -355,18 +385,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "IYXMyAOLuhMV",
-        "outputId": "f705f836-6a59-407d-88a0-efde0e146ab9"
+        "outputId": "bf0fd7a7-1fab-43e4-d8e9-2edf335f1adf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Time taken to calculate Math.fsum for n = 10^7:  0.7596390247344971\n",
-            "Math.fsum for n = 10^7:  10023875.609561507\n",
+            "Time taken to calculate Math.fsum for n = 10^7:  0.779412031173706\n",
+            "Math.fsum for n = 10^7:  10020925.855959198\n",
             "Absolute error :  0.0\n",
             "Relative error :  0.0\n"
           ]
@@ -391,20 +424,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "IGlIPgO4uhMW",
-        "outputId": "fe25d396-10bb-4d21-b041-6544f4129544"
+        "outputId": "ce7dfe64-fe17-487a-a5a6-26b73268ebeb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Time taken to calculate numpy.sum for n = 10^7:  0.0023229122161865234\n",
-            "numpy.sum for n = 10^7:  10023875.609561514\n",
-            "Absolute error :  7.450580596923828e-09\n",
-            "Relative error :  7.432834252070046e-16\n"
+            "Time taken to calculate numpy.sum for n = 10^7:  0.014232873916625977\n",
+            "numpy.sum for n = 10^7:  10020925.855959179\n",
+            "Absolute error :  1.862645149230957e-08\n",
+            "Relative error :  1.8587555441529266e-15\n"
           ]
         }
       ],
@@ -420,20 +456,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "RT22DkfguhMW",
-        "outputId": "10c5bc6d-3206-4ded-c8b6-968a330ffa06"
+        "outputId": "54a60562-5188-43d8-9a9d-6364b7c43b97",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Time taken to calculate naive sum for n = 10^7:  1.663158655166626\n",
-            "Naive sum for n = 10^7:  10023874.30407842\n",
-            "Absolute error :  1.3054830860346556\n",
-            "Relative error :  1.3023735897015623e-07\n"
+            "Time taken to calculate naive sum for n = 10^7:  2.447606325149536\n",
+            "Naive sum for n = 10^7:  10020925.478232441\n",
+            "Absolute error :  0.3777267560362816\n",
+            "Relative error :  3.7693798104658843e-08\n"
           ]
         }
       ],
@@ -451,20 +490,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "tXHVJIepuhMW",
-        "outputId": "a762083c-4b75-4af7-cf74-2541358ff92b"
+        "outputId": "ec3d324f-5b6c-4751-c155-5dc060d19a2d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Time taken to calculate Compensated sum for n = 10^7:  3.8868720531463623\n",
-            "Compensated sum for n = 10^7:  10023874.30407995\n",
-            "Absolute error :  1.305481556802988\n",
-            "Relative error :  1.302372064112332e-07\n"
+            "Time taken to calculate Compensated sum for n = 10^7:  5.8607025146484375\n",
+            "Compensated sum for n = 10^7:  10020925.478232287\n",
+            "Absolute error :  0.37772691063582897\n",
+            "Relative error :  3.7693813532329856e-08\n"
           ]
         }
       ],
